--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -68,13 +68,15 @@
                             <td><%= elemento.product_name %></td>
                             <td><%= elemento.licence_name.toUpperCase() %></td>
                             <td class="pencil_trash">
+                                
+                                <!-- -->
                                 <button type="submit">
                                     <a href="/admin/edit/<%= elemento.product_id %>">
                                     <img src="/img/icons/edit_pencil.svg">
                                     </a>
                                 </button>
-                                <form action="./admin.html">  <!-- METHOD DELETE ? -->
-                                    <button type="reset">
+                                <form action="/admin/delete/<%= elemento.product_id %>?_method=DELETE" method="POST">  <!-- METHOD DELETE ? -->
+                                    <button type="submit">
                                         <img src="/img/icons/delete_trash.svg">
                                     </button>
                                 </form>
