--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -98,11 +98,11 @@
       <div class="glide__arrows" data-glide-el="controls">
         <button class="glide__arrow glide__arrow--left page" data-glide-dir="<"><iconify-icon class="iconify_carrousel" icon="mdi:chevron-left"></iconify-icon></button>
       </div>
-      <div class="page"><a href="/pages/shop/shop.html">1</a></div>
-      <div class="page"><a href="/pages/shop/shop.html">2</a></div>
-      <div class="page"><a href="/pages/shop/shop.html">...</a></div>
-      <div class="page"><a href="/pages/shop/shop.html">9</a></div>
-      <div class="page"><a href="/pages/shop/shop.html">10</a></div>
+      <div class="page"><a href="/shop/#">1</a></div>
+      <div class="page"><a href="/shop">2</a></div>
+      <div class="page"><a href="/shop">...</a></div>
+      <div class="page"><a href="/shop">9</a></div>
+      <div class="page"><a href="/shop">10</a></div>
       <div class="glide__arrows" data-glide-el="controls">
         <button class="glide__arrow glide__arrow--right page" data-glide-dir=">"><iconify-icon class="iconify_carrousel" icon="mdi:chevron-right"></iconify-icon></button>
       </div>
