Corrección en register.ejs

--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -5,40 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register | Funkoshop</title>
-    <link rel="stylesheet" href="../../css/Normalizacioncss.css">
-    <link rel="stylesheet" href="../../css/register.css">
+    <link rel="stylesheet" href="/css/Normalizacioncss.css">
+    <link rel="stylesheet" href="/css/register.css">
 </head>
 
 <body>
-<<<<<<< HEAD:pages/admin/register.html
-    <header>
-        <nav class="navbar container">
-            <picture class="navbar-logo">
-                <a href="../../index.html">
-                    <img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
-                </a>
-            </picture>
-            <ul class="navbar-menu"> 
-                <li class="navbar-item">
-                    <a class="navbar-link"  href="../admin/admin.html">VER TIENDA</a>
-                </li>
-                <li class="navbar-item">
-                    <a class="navbar-link" href="../admin/admin.html">ADMIN</a>
-                </li>
-                <li class="navbar-item">
-                    <a class="navbar-link" href="../../index.html">SALIR</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-=======
   <!--  ************* HEADER ****************  -->
 
   <%- include("../partials/header_admin") %>
 
   <!--  ************** MAIN *****************  -->
 
->>>>>>> development:src/views/auth/register.ejs
 
     <main class="register-container">
         <div class="register-container-form">
@@ -79,36 +56,11 @@
             </form>
         </div>
     </main>
-<<<<<<< HEAD:pages/admin/register.html
-    <footer class="footer">
-        <nav class="navbar container">
-            <ul class="navbar-item">
-                <li class="navbar-item">
-                    <a class="navbar-link" href="../shop/shop.html">SHOP</a>
-                </li>
-                <li class="navbar-item">
-                    <a class="navbar-link" href="./register.html">REGISTRARSE</a>
-                </li>
-                <li class="navbar-item">
-                    <a class="navbar-link" href="./login.html">INGRESAR</a>
-                </li>
-                <li class="navbar-item">
-                    <a class="navbar-link" href="../shop/contacto.html">CONTACTO</a>
-                </li>
-            </ul>
-            <picture>
-                <img src="../../img/branding/isotype.svg" alt="Logo de la tienda" class="footer-logo">
-            </picture>
-        </nav>
-        <p class="footer-copy">All rights reserved 2023 - FUNKOSHOP &copy;</p>
-    </footer>
-=======
     <!--  ************* FOOTER ****************  -->
 
     <%- include("../partials/footer") %>
 
     <!--  ************* SCRIPTS ****************  -->
->>>>>>> development:src/views/auth/register.ejs
 </body>
 
 </html>
