Aplicando medidas relativas

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,7 +49,7 @@
         </section>
 
         <section class="index-collection container">
-            <article class="index-collection-content">
+            <article class="index-collection-content index-collection-harry-potter">
                 <h3 class="index-collection-title">HARRY POTTER</h3><!-- h3 por ser el título de un article que está dentro de un section -->
                 <p class="index-collection-text">Revive los recuerdos de una saga llena de magia y encanto.</p>
                 <a class="index-collection-link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
