--- a/public/css/Normalizacioncss.css
+++ b/public/css/Normalizacioncss.css
@@ -99,15 +99,15 @@ img{
 }
 
 .container {
-  max-width: 1200px ;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 .grilla {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 0.6em;
+  grid-auto-rows: minmax(6.25em, auto);
 }
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -119,17 +119,26 @@ input[type=number]::-webkit-outer-spin-button {
 
 header {
   background-color: var(--dark-bg-solid);
-  padding: var(--spacing-36);
+  padding: var(--spacing-16);
+  width: 100%;
+  height: 10em;
+  align-items: center;
+  
 }
 
 .navbar{
+  gap: 2em;
+  margin: 1em;
   display:flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 
-.navbar-logo{
-  max-width: 300px;
+.navbar-logo{ 
+  gap: 2em;
+  margin-top: 1em;
+  max-width: 30em;
 }
 
 .navbar-menu{
@@ -172,7 +181,7 @@ navbar-link iconify-icon{
 
 .submenu{
   display: none;
-  width: 300px;
+  width: 18.75em;
   position: absolute;
   background-color: var(--dark-bg-solid);
   z-index: 3;
@@ -246,7 +255,7 @@ navbar-link iconify-icon{
   font-weight: 500;
   background-color: var(--light-bg-solid);
   padding: var(--spacing-12);
-  border-radius: 50px;
+  border-radius: 3.12em;
   transition: all .3s ease-in-out;  
   /*Transition Para el :hover. "all" por el bkgnd y el color. */
 }
@@ -260,7 +269,7 @@ navbar-link iconify-icon{
 
 /*****************  INICIO MAIN DE INDEX.HTML  *****************/
 .index-main-container {
-  max-width: 1200px ;
+  max-width: 100%;
   margin: 0;
 }
 .index-collection {
@@ -270,8 +279,8 @@ navbar-link iconify-icon{
   padding: var(--spacing-16) 0;
 }
 
-.index-collection-star-wars{
-  margin-left: 85px;
+.index-collection-star-wars, .index-collection-harry-potter{
+  margin-left: 5.31em;
 }
 
 
@@ -307,7 +316,7 @@ navbar-link iconify-icon{
   background-color: var(--dark-bg-solid);
   color: var(--light-solid-font);
   padding: var(--spacing-16) var(--spacing-36);
-  border-radius: 50px;
+  border-radius: 3.1em;
   font-weight: 500;
   /*Si tenemos un :hover, debemos poner un transition...*/
   transition: background .3s ease-in-out;
@@ -324,12 +333,12 @@ navbar-link iconify-icon{
 
 /***************  INICIO DE ULTIMOS LANZAMIENTOS  ****************/
 .container {
-  max-width: 1200px ;
-  margin: 0px;
+  max-width: 100% ;
+  margin: 0;
 }
 
 .container-b{
-  margin:40px;
+  margin: 2.5em;
 }
 
 /*****************  FIN DE ULTIMOS LANZAMIENTOS  *****************/
@@ -378,16 +387,16 @@ navbar-link iconify-icon{
   color: var(--light-solid-font);
   background-color: #4F4F4F;
   border: none;
-  width: 18px;
-  height: 16px;
+  width: 1.1 em;
+  height: 1 em;
 }
 .item-input{
   font-size: var(--font-small);
   color: #747474;
   border-color: #C9C9C9;
   border-width: thin;
-  width: 105.47px;
-  height: 35.24px;
+  width: 6.6em;
+  height: 2.2em;
   text-align: center;
 }
 .item-btn{
@@ -427,7 +436,6 @@ navbar-link iconify-icon{
   gap: var(--spacing-36);
   margin: var(--spacing-68) auto;
 }
-
 .slider-title{
   font-family: var(--second-font);
   font-size: var(--font-display);
