--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer  class="footer">
-    <nav class="navbar container" >
+    <nav class="container navbar " >
         <ul class="navbar-items">
             <li class="navbar-item">
                 <a class="navbar-link" href="/shop">SHOP</a>
