--- a/src/views/partials/header_shop.ejs
+++ b/src/views/partials/header_shop.ejs
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar container">
+    <nav class="container navbar">
         <picture class="navbar-logo">
             <a href="/">
                 <img src="/img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
