--- a/public/css/Normalizacioncss.css
+++ b/public/css/Normalizacioncss.css
@@ -99,9 +99,10 @@ img{
 }
 
 .container {
-  max-width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
 }
+
 
 .grilla {
   display: grid;
@@ -121,14 +122,13 @@ header {
   background-color: var(--dark-bg-solid);
   padding: var(--spacing-16);
   width: 100%;
-  height: 10em;
+  height: 13em;
   align-items: center;
+
   
 }
 
 .navbar{
-  gap: 2em;
-  margin: 1em;
   display:flex;
   justify-content: space-between;
   align-items: center;
@@ -136,8 +136,6 @@ header {
 }
 
 .navbar-logo{ 
-  gap: 2em;
-  margin-top: 1em;
   max-width: 30em;
 }
 
@@ -332,10 +330,7 @@ navbar-link iconify-icon{
 
 
 /***************  INICIO DE ULTIMOS LANZAMIENTOS  ****************/
-.container {
-  max-width: 100% ;
-  margin: 0;
-}
+
 
 .container-b{
   margin: 2.5em;
