--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,7 +26,7 @@
     <!--  ************* MAIN ****************  -->
     
     <main class="index-main-container">
-        <section class="index-collection index-container">
+        <section class="container index-collection index-container">
             <article class="index-collection-content index-collection-star-wars">
                 <h3 class="index-collection-title">Star Wars & The Mandalorian</h3>
                 <p class="index-collection-text">Disfruta de una saga que sigue agregando personajes a su colección.</p>
