--- a/public/css/create_Edit_contact.css
+++ b/public/css/create_Edit_contact.css
@@ -1,7 +1,7 @@
 main {
     display: flex;
     flex-direction: column;
-    margin-top: 36px;
+    margin-top: 2.25em;
 
 }
 
@@ -12,15 +12,15 @@ form {
 }
 
 h1 {
-    font-size: 42px;
+    font-size: 2.6em;
     font-family: var(--second-font);
     font-weight: 700;
 }
 
 textarea {
-    margin-top: 35px;
+    margin-top: 2.2em;
     width: 82%;
-    height: 195px;
+    height: 12.2em;
     font-size: var(--font-medium);
     font-family: var(--base-font);
     font-weight: 400;
@@ -31,11 +31,11 @@ textarea {
     font-size: var(--font-jumbo);
     font-family: var(--second-font);
     font-weight: 700;
-    margin-top: 36px;
+    margin-top: 2.2em;
 }
 
 .main-article {
-    margin-top: 43px;
+    margin-top:  var(--spacing-28);
     justify-content: space-between;
 }
 
@@ -59,8 +59,8 @@ input[type="number"] {
     font-family: var(--base-font);
     font-weight: 400;
     gap: var(--spacing-12);
-    margin-left: 10px;
-    margin-right: 50px;
+    margin-left: 0.6em;
+    margin-right: 3.1em;
 }
 
 input[type="submit"],
@@ -68,12 +68,12 @@ input[type="button"]{
     background-color: var(--primario-solido);
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 0.6em 1.2em;
     font-size: var(--font-xsmall);
     cursor: pointer;
-    margin-bottom: 36px;
-    width: 175px;
-    height: 44px;
+    margin-bottom: 2.2em;
+    width: 11em;
+    height: 2.75em;
 
 }
 
@@ -81,7 +81,7 @@ input[type="button"]{
     font-size: var(--font-large);
     font-family: var(--base-font);
     font-weight: 400;
-    margin-top: 43px;
+    margin-top: 2.75em;
 }
 
 .form-label {
@@ -89,7 +89,7 @@ input[type="button"]{
     font-family: var(--base-font);
     font-weight: 400;
     text-align: left;
-    margin-top: 59px;
+    margin-top: 3.7em;
 }
 
 input [type="file"] {
@@ -99,34 +99,34 @@ input [type="file"] {
 
 #licencia,
 #categoria {
-    border-radius: 4px;
-    padding: 2px;
-    width: 243px;
-    height: 44px;
-    margin-left: 10px;
-    margin-right: 25px;
+    border-radius: 0.25em;
+    padding: 0.12em;
+    width: 15.2em;
+    height: 2.75em;
+    margin-left: 0.6em;
+    margin-right: 1.5em;
 }
 
 #cuotas {
-    border-radius: 4px;
+    border-radius: 0.25em;
     padding: 2px;
-    width: 296px;
-    height: 44px;
+    width: 18.5em;
+    height: 2.75em;
 }
 
 #sku,
 #precio {
-    width: 130px;
+    width: 8em;
 }
 
 #stock,
 #descuento {
-    width: 55px;
+    width: 3.5em;
 }
 
 #nombre {
-    width: 296px;
-    height: 22px;
+    width: 18.5em;
+    height: 1.2em;
 }
 
 
@@ -183,11 +183,11 @@ input [type="file"] {
 #categoria, #licencia, #cuotas{
     border: var(--dark-solido) 1px solid;
     border-radius: 7%;
-    width: 15rem;
+    width: 15em;
     margin-left: var(--spacing-8);
     color: var(--dark-solido);
     font-family: var(--base-font);
-    font-size: 1.25rem;
+    font-size: 1.25em;
     font-weight: 500;
 }
 .nombre_producto_edit{
@@ -203,15 +203,15 @@ input [type="file"] {
 #nombre_prod{
     color: var(--dark-solido);
     font-family: var(--base-font);
-    font-size: 1.2rem;
+    font-size: 1.2em;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-decoration: var(--primario-900) 2px solid underline;
     }
 #descripcion{
-    width: 63rem;
-    height: 12.17rem;
+    width: 63em;
+    height: 12.17em;
     flex-shrink: 0;
     border-radius: 4px;
     border: 1px solid var(--dark-solido);
@@ -228,7 +228,7 @@ input [type="file"] {
 .sku_precio_stock_edit{
     margin-bottom: var(--spacing-36);    
     display: flex;
-    gap: 0.8rem;
+    gap: 0.8em;
     
 }
 .sku-edit{
@@ -252,7 +252,7 @@ input [type="file"] {
     text-decoration: var(--primario-900) 2px solid underline;
 }
 #cuotas{
-    width: 21.6rem;
+    width: 21.6em;
 }
 .descuento_edit{
     margin-bottom: var(--spacing-36);
@@ -272,12 +272,12 @@ input [type="file"] {
 }
 
 .img_edit{
-    width: 15rem;
+    width: 15em;
 }
 .input_mod_edit{
-    margin-top: 5rem;
+    margin-top: 5em;
     background-color: var(--primario-900);
-    width: 17rem;
+    width: 17em;
     padding: var(--spacing-12) var(--spacing-20);
     color: var(--light-solid-font);
     font-family: var(--base-font);
@@ -290,27 +290,7 @@ input [type="file"] {
     color: var(--primario-900);
 
 }
-.footer_edit{
-    height: 343px;
-}
-.footer_nav_edit{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.footer_li_edit{
-    color: var(--light-solid-font);
-    font-family: var(--second-font);
-    font-size: var(--font-xsmall);
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    margin: 1.25rem 0;
-    
-}
-.footer_p_edit{
-    font-size: var(--font-xsmall);
-}
+
 .link_edit{
     padding: var(--spacing-8) var(--spacing-16);
     transition: background 0.5 ease-in-out;
@@ -328,11 +308,11 @@ background-color: var(--primario-solido);
   font-family: var(--primary-font);
   transition: background .3s ease-in-out;
   position: relative;
-  margin-bottom: 40px;
-  width: 175px;
-  height: 44.33px;
+  margin-bottom: 2.5em;
+  width: 11em;
+  height: 2.75em;
   font-weight: bold;
-  margin-right: 20px;
+  margin-right: 1.2em;
 }
 
 .edit-modificar:hover{
