--- a/src/views/admin/create.ejs
+++ b/src/views/admin/create.ejs
@@ -17,8 +17,8 @@
 
   <!--  ************** MAIN *****************  -->
 
-    <main class="container container-b"> 
-        <form action="#" method="post">
+    <main class="container create container-b"> 
+        <form  class="container" action="#" method="post">
             <h1 class="main-article">CREAR NUEVO ITEM</h1>
             <article class="main-article">
                 <label for="categoria">Categoría:</label>
