--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,6 +1,5 @@
 .container-cart{
     margin-top: 6.25em;
-    margin-left: 6.9em;
 
 }
 
@@ -13,17 +12,18 @@
 
 .cart-container{
     margin-top: 4.3em;
+    width: 100%;
 }
 
 .cart-head{
     display: flex;
     font-size: var(--font-xsmall);
     background-color: var(--light-bg-solid);
-    width: 69em;
     padding: 0.6em;
     border-radius: 0.6em;
     box-shadow: 0px 0px 0.93em 0.12em var(--dark-300);
-    margin-bottom: 30px; 
+    margin-bottom: 1.9em; 
+    align-items: center;
 }
 
 .item-cart-head1{
@@ -31,7 +31,7 @@
 }
 
 .item-cart-head2{
-    padding-left: 16.9em;
+    padding-left: 25em;
 }
 
 .item-cart-head3{
@@ -62,9 +62,9 @@
     font-size: var(--font-xsmall);
     color: var(--secundario-solido);
     font-weight: 300;
-    gap: 1rem;
+    gap: 1em;
     align-items: center;
-    margin-left: 5.6em;
+    margin-left: 6.9em;
   }
 
 .cart-input{
@@ -76,7 +76,6 @@
     width: 5.6em;
     height: 2.5em;
     text-align: center;
-    margin-top: 3.5em;
     margin-left: 1.9em;
 }
 
@@ -84,7 +83,6 @@
     display: flex;
     flex-direction: column-reverse;
     gap: 0.3rem;
-    margin-top: 3.1em;
 }
 
 .cart-mm{
@@ -100,18 +98,17 @@
     font-size: var(--font-xsmall);
     color: var(--secundario-solido);
     font-weight: 300;
-    gap: 1rem;
+    gap: 1em;
     align-items: center;
     margin-left: 13.1em;
+
   }
 
 .price-cart{
-    margin-top: 3.4em;
     margin-left: 10.6em;
 }
 
 .eliminar-cart{
-    margin-top: 3.4em;
     width: 1.75em;
     margin-left: 6.8em;
 }
@@ -120,8 +117,7 @@
     display: flex;
     flex-direction: column;
     align-items: end;
-    margin-right: 8.75em;
-    margin-top: 3.1em;
+    margin-top: 2em;
 }
 
 .titulo-resumen{
@@ -133,10 +129,9 @@
 
 .cart-articulos{
     display: flex;
-    margin-top: 3.1em;
     font-size: var(--font-xxsmall);
     background-color: var(--light-bg-solid);
-    width: 35.8em;
+    
     padding: 1.9em;
     border-radius: 0.6em;
     box-shadow: 0px 0px 1em 0.15em var(--dark-300);
@@ -162,7 +157,7 @@
     padding-top: 0.6em;
     font-weight: 700;
     font-size: var(--font-xsmall);
-    width: 32em;
+    
 }
 
 .btn-pagar {
@@ -176,7 +171,6 @@
       transition: background .3s ease-in-out;
       position: relative;
       margin-bottom: 6.25em;
-      width: 35.75em;
       height: 2.8em;
       font-weight: 700;
     }
