--- a/public/css/item_shop.css
+++ b/public/css/item_shop.css
@@ -254,10 +254,20 @@
   
 
   /*-----------------MAIN SHOP-----------------*/
-  
+  .principal{
+    display: flex;
+  }
+  .left-shop{
+    align-items: start;
+    margin-top: var(--spacing-12);
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+  }
   .filtro{
     font-family: var(--baseline-font);
     font-weight: 500;
+    
   }
 
   .op-filtro{
@@ -296,7 +306,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  width: 100%;
+  width: auto;
   height: 100%;
 }
 
@@ -309,12 +319,33 @@
   flex-direction: row;
   gap: 0.6em;
 }
-
-.page{
+.pagination{
+  display: flex;
+  justify-content: center;
+  gap: var(--spacing-12);
+}
+.pagination .page{
+  display: block;
   border: 0.06em solid var(--dark-bg-solid);
+  transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
   width: 2.75em;
   height: 2.75em;
   text-align: center;
-  font-size: var(--font-small);
+  font-size: var(--font-medium);
   font-weight: 700;
+  border-radius: 4px;
+  padding: var(--spacing-12) var(--spacing-16);
+  margin-bottom: 0.3em;
+}
+.pagination .page:first-of-type{
+  color: var(--dark-500);
+}
+.pagination .page:hover{
+  background-color: var(--primario-900);
+  color: var(--light-bg-solid);
+  border-color: var(--primario-500);
+}
+.pagination .page-selected{
+  border-color: var(--primario-solido);
+  color: var(--primario-solido)
 }
