--- a/src/views/shop/cart.ejs
+++ b/src/views/shop/cart.ejs
@@ -9,11 +9,10 @@
     <!-- script para insertar iconos -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     
-    <!-- Estilos -->
+    <!-- Estilos -->    
     
-    <link rel="stylesheet" href="../../css/cart.css">
-    <link rel="stylesheet" href="../../css/item_shop.css">
     <link rel="stylesheet" href="../../css/Normalizacioncss.css">
+    <link rel="stylesheet" href="../../css/cart.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
 
@@ -49,7 +48,7 @@
             </article>
         </section> 
         -->
-    <main class="container-cart">
+    <main class="container container-cart ">
         <section>
             <h1 class="titulo-carrito">CARRITO DE COMPRAS</h1>
          <section>
@@ -127,7 +126,7 @@
                 </tbody>
             </table>
         </section>
-        <section class="resumen-cart">
+        <section class="resumen-cart" >
             <div>
                 <h1 class="titulo-resumen">RESUMEN</h1>
             </div>
