[FEAT] Implementación de EDIT en Admin (edit.ejs).
Implementación (parcial) de la edición de los items listados en
admin.ejs, la cual se efectiviza a través de la vista
edit.ejs

Falta poder editar las imágenes y -si mal no recuerdo- hay un problema
con la edicion de los campos que viene acompañados de texto adicional a
lo que se quiere modificar, por ejemplo, el precio (que tiene el signo
pesos, además del número a editar) o la cantidad de cuotas (que tiene el
texto "cuotas sin interés", además de la cantidad efectiva de cuotas).

 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   app.js
	modified:   src/controllers/adminController.js
	modified:   src/model/productModel.js
	modified:   src/routes/adminRoutes.js
	modified:   src/views/admin/create.ejs
	modified:   src/views/admin/edit.ejs

--- a/src/views/admin/create.ejs
+++ b/src/views/admin/create.ejs
@@ -18,7 +18,7 @@
   <!--  ************** MAIN *****************  -->
 
     <main class="container container-b"> 
-        <form action="#" method="post">
+        <form action="/admin/create" method="POST">
             <h1 class="main-article">CREAR NUEVO ITEM</h1>
             <article class="main-article">
                 <label for="categoria">Categoría:</label>
