--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -30,40 +30,41 @@
             
                 <label for="licencia">Licencia:</label>
                 <select class="create-input edit-input" id="licencia" name="licencia" img src="/img/material-symbols_arrow-drop-down-rounded.svg" alt="">
-                    <option value="opcion1">Naruto Shippuden</option>
-                    <option value="opcion2">Opción 2</option>
-                    <option value="opcion3">Opción 3</option>
+                    <option value="opcion4">Naruto Shippuden</option>
+                    <option value="opcion1">Pokemon</option>
+                    <option value="opcion2">Star Wars</option>
+                    <option value="opcion3">Harry Potter</option>
                 </select>
             </article>
 
             <article class="main-article">
                 <label class="form-label" for="nombre">Nombre del Producto:</label>
-                <input class="create-input edit-input" type="text" id="nombre" name="nombre" value="<%=data.product_name%>">
+                <input class="create-input edit-input" type="text" id="nombre" name="nombre" value="<%=item.product_name%>">
             </article>
             
-            <textarea class="create-input edit-input" id="descripcion" name="descripcion"><%=data.product_description%></textarea>
+            <textarea class="create-input edit-input" id="descripcion" name="descripcion"><%=item.product_description%></textarea>
             
             <article class="main-article">
                 <label for="sku">SKU:</label>
-                <input class="edit-input" type="text" id="sku" name="sku" value="<%=data.sku%>">
+                <input class="edit-input" type="text" id="sku" name="sku" value="<%=item.sku%>">
             
                 <label for="precio">Precio:</label>
-                <input class="edit-input" type="text" id="precio" name="precio" value="$ <%=data.price%>">
+                <input class="edit-input" type="text" id="precio" name="precio" value="$ <%=item.price%>">
                 
                 <label for="stock">Stock:</label>
-                <input class="edit-input" min="0" type="number" id="stock" name="stock" value="<%=data.stock%>">
+                <input class="edit-input" min="0" type="number" id="stock" name="stock" value="<%=item.stock%>">
             </article>
             
             <article class="main-article">
                 <label for="descuento">Descuento:</label>
-                <input class="edit-input" type="text" id="descuento" name="descuento" value="<%=data.discount%>%">
+                <input class="edit-input" type="text" id="descuento" name="descuento" value="<%=item.discount%>%">
                 
                 <label for="cuotas">Cuotas:</label>
                 <select class="create-input edit-input" id="cuotas" name="cuotas">
-                    <option value="opcion1">6 cuotas sin interés</option>
-                    <option value="opcion2">3 cuotas sin interés</option>
-                    <option value="opcion3">Opción 2</option>
-                    <option value="opcion4">Opción 3</option>
+                    <option value="opcion1">12 cuotas sin interés</option>
+                    <option value="opcion2">9 cuotas sin interés</option>
+                    <option value="opcion3">6 cuotas sin interés</option>
+                    <option value="opcion4">3 cuotas sin interés</option>
                 </select>
             </article>
             
@@ -77,17 +78,20 @@
              <div>
                 <article>
                     <picture class="img_frente_edit">
-                        <img class="img_edit" src="../../img/Group 109.svg" alt="Imagen frente caja figura Kakashi">
+                        <img class="img_edit" src="/img/Group 109.svg" alt="Imagen frente caja figura Kakashi">
                     </picture>
                     <picture >
-                        <img class="img_edit" src="../../img/Group 110.svg" alt="Imagen dorso caja figura Kakashi">
+                        <img class="img_edit" src="/img/Group 110.svg" alt="Imagen dorso caja figura Kakashi">
                     </picture>
                 </article>
             </div>
 
             <article class="main-article">
+            <form action="/admin/edit/<%= item.product_id %>?_method=PUT" method="POST" enctype="application/x-www-form-urlencoded">
+                <input type="hidden" name="_method" value="PUT">
                 <button class="edit-modificar" type="submit">Modificar Producto</button>
-            </article>
+            </form>
+        </article>
         </form>
     
     
